Added way to upload to a s3 bucket

--- a/example.env
+++ b/example.env
@@ -1,2 +1,6 @@
 # URL from the IP Camera
 URL=xxx.xxx.xxx
+
+# Access and secret key from aws
+ACCESS_KEY=XXXXXXXXXXXXXXX
+SECRET_KEY=XXXXXXXXXXXXXXXXXXXXXXXX
